--- a/templates/index.html
+++ b/templates/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <title>pashto parts of speech tagger</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-
+    <link rel = "icon" type = "image/png" href = "C:\Users\HAIER\Desktop\LOGO4-removebg-preview.png">
 </head>
 
 <body>
-<h1 id="head1">Pashto Parts Of Speech Tagger </h1>
+
+<img id="img1" src="http://drive.google.com/uc?export=view&id=1IVOVgi3WcnmUioahzlGpc2O9J0a2nTz6">
 <h2 id="head2">یوه پښتو جمله ولیکئ او د هغې د ګرامري اړه پوه شئ په لږ وخت کې وکړئ</h2>
 
 <div class="container">
@@ -18,8 +19,6 @@
     </form>
 </div>
 
-
-
 </body>
 
 </html>
@@ -28,36 +27,29 @@
 	width: 100%;
 	height:100%;
 	font-family: 'Open Sans', sans-serif;
-	background: #092756;
+	background: #F6D55c;
 	color: #fff;
 	font-size: 18px;
 	text-align:center;
 	letter-spacing:1.2px;
-	background: #606c88;
-	background: -webkit-linear-gradient(to right, #3f4c6b, #606c88);
-	background: linear-gradient(to right, #3f4c6b, #606c88);
+	background: #F6D55c;
+	background: -webkit-linear-gradient(to right, #f6d16a, #f6bd4f, #f6a835, #f7911c, #f87703);
+	background: linear-gradient(to right, #b5621a, #f6d16a, #f6bd4f, #f6a835, #f7911c, #f87703);
+
 }
 
-.container {
-	position: absolute;
-	top: 60%;
-	left: 33.33%;
-	margin: -150px 0 0 -150px;
-	width:800px;
-	height:400px;
-}
+
 
 .login h1 { color: #fff; text-shadow: 0 0 10px rgba(0,0,0,0.3); letter-spacing:1px; text-align:center; }
 
 input {
 	width: 100%;
 	margin-bottom: 10px;
-	background: rgba(0,0,0,0.3);
 	border: none;
 	outline: none;
 	padding: 12px;
-	font-size: 18px;
-	color: #fff;
+	font-size: 20px;
+	color: black;
 	text-shadow: 1px 1px 1px rgba(0,0,0,0.3);
 	border: 1px solid rgba(0,0,0,0.3);
 	border-radius: 4px;
@@ -74,14 +66,11 @@ text-align:right;
 }
 input[type=submit]{
 width: 50%;
+color: black; 
 }
-#head1{
-padding-top: 10px;
-padding-bottom: 20px;
-}
+
 #head2{
-padding-top: 10px;
-padding-bottom: 20px;
+padding-bottom: 10px;
 }
 
 </style>
