--- a/templates/prediction.html
+++ b/templates/prediction.html
@@ -7,8 +7,8 @@
 
 </head>
 <body>
-<h1 id="head">Pashto Parts Of Speech Tagger </h1>
 
+<img id="img1" src="http://drive.google.com/uc?export=view&id=1IVOVgi3WcnmUioahzlGpc2O9J0a2nTz6" style="width:379px;height:164px;">
 <div class="container">
     <table id="grid">
         <tr>
@@ -36,14 +36,12 @@ body {
 	width: 100%;
 	height:100%;
 	font-family: 'Open Sans', sans-serif;
-	background: #092756;
-	color: #fff;
-	font-size: 16px;
+	color: white;
+	font-size: 18px;
 	text-align:center;
 	letter-spacing:1.2px;
-	background: #606c88;
-	background: -webkit-linear-gradient(to right, #3f4c6b, #606c88);
-	background: linear-gradient(to right, #3f4c6b, #606c88);
+	background: -webkit-linear-gradient(to right, #f6d16a, #f6bd4f, #f6a835, #f7911c, #f87703);
+	background: linear-gradient(to right, #f6d16a, #f6bd4f, #f6a835, #f7911c, #f87703);
 }
 #head{
 padding-top: 10px;
@@ -64,21 +62,16 @@ padding-bottom: 30px;
 
 }
 
-#grid tr:nth-child(even){background-color: #606c88;}
-
-#grid tr:hover {background-color: grey;}
-
 #grid th {
   padding-top: 10px;
   padding-bottom: 10px;
   text-align:center;
-  background: #606c88;
-  background: -webkit-linear-gradient(to right, #3f4c6b, #606c88);
-  background: linear-gradient(to right, #3f4c6b, #606c88);
-  color: white;
+  color: #800000;
 }
 .container {
+
 	position: absolute;
+	padding-top: 100px;
 	top: 50%;
 	left: 42%;
 	margin: -150px 0 0 -150px;
